newGramm/bnfc_files/ParGramm.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGramm.y
-----------------------------------------------------------------------------

state 43 contains 1 shift/reduce conflicts.
state 64 contains 2 shift/reduce conflicts.
state 68 contains 5 shift/reduce conflicts.
state 70 contains 13 shift/reduce conflicts.
state 75 contains 14 shift/reduce conflicts.
state 104 contains 1 shift/reduce conflicts.
state 171 contains 13 shift/reduce conflicts.
state 178 contains 1 shift/reduce conflicts.
state 189 contains 5 shift/reduce conflicts.
state 191 contains 7 shift/reduce conflicts.
state 195 contains 14 shift/reduce conflicts.
state 223 contains 1 shift/reduce conflicts.
state 234 contains 2 shift/reduce conflicts.

rule 31 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDeclaration -> ListDeclaration         (1)
	%start_pTypeSpec -> TypeSpec                       (2)
	%start_pSType -> SType                             (3)
	%start_pDeclaration -> Declaration                 (4)
	%start_pListParamClause -> ListParamClause         (5)
	%start_pParamClause -> ParamClause                 (6)
	%start_pListArg -> ListArg                         (7)
	%start_pArg -> Arg                                 (8)
	%start_pBlock -> Block                             (9)
	%start_pListStm -> ListStm                         (10)
	%start_pStm -> Stm                                 (11)
	%start_pParams -> Params                           (12)
	%start_pListParams -> ListParams                   (13)
	%start_pListExp -> ListExp                         (14)
	%start_pOp -> Op                                   (15)
	%start_pOp1 -> Op1                                 (16)
	%start_pOp2 -> Op2                                 (17)
	%start_pOp3 -> Op3                                 (18)
	%start_pOp4 -> Op4                                 (19)
	%start_pOp5 -> Op5                                 (20)
	%start_pExp -> Exp                                 (21)
	%start_pExp1 -> Exp1                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp3 -> Exp3                               (24)
	%start_pExp4 -> Exp4                               (25)
	%start_pExp5 -> Exp5                               (26)
	%start_pExp6 -> Exp6                               (27)
	%start_pExp7 -> Exp7                               (28)
	%start_pLExp -> LExp                               (29)
	%start_pLExp1 -> LExp1                             (30)
	Integer -> L_integ                                 (31)
	PTrue -> L_PTrue                                   (32)
	PFalse -> L_PFalse                                 (33)
	PReturn -> L_PReturn                               (34)
	PNull -> L_PNull                                   (35)
	PIdent -> L_PIdent                                 (36)
	PFloat -> L_PFloat                                 (37)
	PInteger -> L_PInteger                             (38)
	PString -> L_PString                               (39)
	PChar -> L_PChar                                   (40)
	Program -> ListDeclaration                         (41)
	ListDeclaration ->                                 (42)
	ListDeclaration -> ListDeclaration Declaration     (43)
	TypeSpec -> SType                                  (44)
	TypeSpec -> '*' TypeSpec                           (45)
	TypeSpec -> 'Array' '[' TypeSpec ']' '(' PInteger ')'   (46)
	SType -> 'Float'                                   (47)
	SType -> 'Int'                                     (48)
	SType -> 'Char'                                    (49)
	SType -> 'String'                                  (50)
	SType -> 'Bool'                                    (51)
	Declaration -> 'var' PIdent ':' TypeSpec '=' Exp ';'   (52)
	Declaration -> 'var' PIdent ':' TypeSpec ';'       (53)
	Declaration -> 'def' PIdent ListParamClause ':' TypeSpec '=' Block   (54)
	Declaration -> 'def' PIdent ListParamClause ':' TypeSpec '=' Exp   (55)
	Declaration -> 'def' PIdent ListParamClause '=' Block   (56)
	ListParamClause -> ParamClause                     (57)
	ListParamClause -> ParamClause ListParamClause     (58)
	ParamClause -> '(' ListArg ')'                     (59)
	ListArg ->                                         (60)
	ListArg -> Arg                                     (61)
	ListArg -> Arg ',' ListArg                         (62)
	Arg -> PIdent ':' TypeSpec                         (63)
	Block -> '{' ListStm '}'                           (64)
	ListStm ->                                         (65)
	ListStm -> ListStm Stm                             (66)
	Stm -> Declaration                                 (67)
	Stm -> Block                                       (68)
	Stm -> LExp '=' Exp ';'                            (69)
	Stm -> 'while' '(' Exp ')' Stm                     (70)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (71)
	Stm -> 'if' '(' Exp ')' Stm                        (72)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (73)
	Stm -> PReturn ';'                                 (74)
	Stm -> PReturn Exp ';'                             (75)
	Stm -> PIdent ListParams ';'                       (76)
	Params -> '(' ListExp ')'                          (77)
	ListParams -> Params                               (78)
	ListParams -> Params ListParams                    (79)
	ListExp ->                                         (80)
	ListExp -> Exp                                     (81)
	ListExp -> Exp ',' ListExp                         (82)
	Op -> '||'                                         (83)
	Op -> Op1                                          (84)
	Op1 -> '&&'                                        (85)
	Op1 -> Op2                                         (86)
	Op2 -> '<'                                         (87)
	Op2 -> '<='                                        (88)
	Op2 -> '>'                                         (89)
	Op2 -> '>='                                        (90)
	Op2 -> '=='                                        (91)
	Op2 -> '!='                                        (92)
	Op2 -> Op3                                         (93)
	Op3 -> '+'                                         (94)
	Op3 -> '-'                                         (95)
	Op3 -> Op4                                         (96)
	Op4 -> '*'                                         (97)
	Op4 -> '/'                                         (98)
	Op4 -> '%'                                         (99)
	Op4 -> Op5                                         (100)
	Op5 -> '^'                                         (101)
	Op5 -> '(' Op ')'                                  (102)
	Exp -> Exp Op Exp1                                 (103)
	Exp -> Exp1                                        (104)
	Exp1 -> Exp1 Op1 Exp2                              (105)
	Exp1 -> Exp2                                       (106)
	Exp2 -> '!' Exp2                                   (107)
	Exp2 -> Exp3 Op2 Exp3                              (108)
	Exp2 -> Exp3                                       (109)
	Exp3 -> Exp3 Op3 Exp4                              (110)
	Exp3 -> Exp4                                       (111)
	Exp4 -> Exp4 Op4 Exp5                              (112)
	Exp4 -> Exp5                                       (113)
	Exp5 -> Exp6 Op5 Exp7                              (114)
	Exp5 -> Exp6                                       (115)
	Exp6 -> '-' Exp7                                   (116)
	Exp6 -> Exp7                                       (117)
	Exp7 -> LExp                                       (118)
	Exp7 -> '&' LExp                                   (119)
	Exp7 -> PInteger                                   (120)
	Exp7 -> PFloat                                     (121)
	Exp7 -> PChar                                      (122)
	Exp7 -> PString                                    (123)
	Exp7 -> PTrue                                      (124)
	Exp7 -> PFalse                                     (125)
	Exp7 -> PNull                                      (126)
	Exp7 -> 'Array' '(' ListExp ')'                    (127)
	Exp7 -> PIdent ListParams                          (128)
	Exp7 -> '(' Exp ')'                                (129)
	LExp -> '*' LExp1                                  (130)
	LExp -> LExp1                                      (131)
	LExp1 -> LExp1 '[' Exp ']'                         (132)
	LExp1 -> PIdent                                    (133)
	LExp1 -> '(' LExp ')'                              (134)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'Array'        { PT _ (TS _ 21) }
	'Bool'         { PT _ (TS _ 22) }
	'Char'         { PT _ (TS _ 23) }
	'Float'        { PT _ (TS _ 24) }
	'Int'          { PT _ (TS _ 25) }
	'String'       { PT _ (TS _ 26) }
	'['            { PT _ (TS _ 27) }
	']'            { PT _ (TS _ 28) }
	'^'            { PT _ (TS _ 29) }
	'def'          { PT _ (TS _ 30) }
	'do'           { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'var'          { PT _ (TS _ 34) }
	'while'        { PT _ (TS _ 35) }
	'{'            { PT _ (TS _ 36) }
	'||'           { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_integ        { PT _ (TI $$) }
	L_PTrue        { PT _ (T_PTrue _) }
	L_PFalse       { PT _ (T_PFalse _) }
	L_PReturn      { PT _ (T_PReturn _) }
	L_PNull        { PT _ (T_PNull _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PFloat       { PT _ (T_PFloat _) }
	L_PInteger     { PT _ (T_PInteger _) }
	L_PString      { PT _ (T_PString _) }
	L_PChar        { PT _ (T_PChar _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDeclaration rule  1
	%start_pTypeSpec rule  2
	%start_pSType   rule  3
	%start_pDeclaration rule  4
	%start_pListParamClause rule  5
	%start_pParamClause rule  6
	%start_pListArg rule  7
	%start_pArg     rule  8
	%start_pBlock   rule  9
	%start_pListStm rule  10
	%start_pStm     rule  11
	%start_pParams  rule  12
	%start_pListParams rule  13
	%start_pListExp rule  14
	%start_pOp      rule  15
	%start_pOp1     rule  16
	%start_pOp2     rule  17
	%start_pOp3     rule  18
	%start_pOp4     rule  19
	%start_pOp5     rule  20
	%start_pExp     rule  21
	%start_pExp1    rule  22
	%start_pExp2    rule  23
	%start_pExp3    rule  24
	%start_pExp4    rule  25
	%start_pExp5    rule  26
	%start_pExp6    rule  27
	%start_pExp7    rule  28
	%start_pLExp    rule  29
	%start_pLExp1   rule  30
	Integer         rule  31
	PTrue           rule  32
	PFalse          rule  33
	PReturn         rule  34
	PNull           rule  35
	PIdent          rule  36
	PFloat          rule  37
	PInteger        rule  38
	PString         rule  39
	PChar           rule  40
	Program         rule  41
	ListDeclaration rules 42, 43
	TypeSpec        rules 44, 45, 46
	SType           rules 47, 48, 49, 50, 51
	Declaration     rules 52, 53, 54, 55, 56
	ListParamClause rules 57, 58
	ParamClause     rule  59
	ListArg         rules 60, 61, 62
	Arg             rule  63
	Block           rule  64
	ListStm         rules 65, 66
	Stm             rules 67, 68, 69, 70, 71, 72, 73, 74, 75, 76
	Params          rule  77
	ListParams      rules 78, 79
	ListExp         rules 80, 81, 82
	Op              rules 83, 84
	Op1             rules 85, 86
	Op2             rules 87, 88, 89, 90, 91, 92, 93
	Op3             rules 94, 95, 96
	Op4             rules 97, 98, 99, 100
	Op5             rules 101, 102
	Exp             rules 103, 104
	Exp1            rules 105, 106
	Exp2            rules 107, 108, 109
	Exp3            rules 110, 111
	Exp4            rules 112, 113
	Exp5            rules 114, 115
	Exp6            rules 116, 117
	Exp7            rules 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129
	LExp            rules 130, 131
	LExp1           rules 132, 133, 134

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'def'          reduce using rule 42
	'var'          reduce using rule 42
	%eof           reduce using rule 42

	Program        goto state 143
	ListDeclarationgoto state 144

State 1


	'def'          reduce using rule 42
	'var'          reduce using rule 42
	%eof           reduce using rule 42

	ListDeclarationgoto state 142

State 2


	'*'            shift, and enter state 140
	'Array'        shift, and enter state 141
	'Bool'         shift, and enter state 133
	'Char'         shift, and enter state 134
	'Float'        shift, and enter state 135
	'Int'          shift, and enter state 136
	'String'       shift, and enter state 137

	TypeSpec       goto state 138
	SType          goto state 139

State 3


	'Bool'         shift, and enter state 133
	'Char'         shift, and enter state 134
	'Float'        shift, and enter state 135
	'Int'          shift, and enter state 136
	'String'       shift, and enter state 137

	SType          goto state 132

State 4


	'def'          shift, and enter state 114
	'var'          shift, and enter state 117

	Declaration    goto state 131

State 5


	'('            shift, and enter state 128

	ListParamClausegoto state 129
	ParamClause    goto state 130

State 6


	'('            shift, and enter state 128

	ParamClause    goto state 127

State 7


	L_PIdent       shift, and enter state 36
	%eof           reduce using rule 60

	PIdent         goto state 123
	ListArg        goto state 125
	Arg            goto state 126

State 8


	L_PIdent       shift, and enter state 36

	PIdent         goto state 123
	Arg            goto state 124

State 9


	'{'            shift, and enter state 119

	Block          goto state 122

State 10


	'('            reduce using rule 65
	'*'            reduce using rule 65
	'def'          reduce using rule 65
	'do'           reduce using rule 65
	'if'           reduce using rule 65
	'var'          reduce using rule 65
	'while'        reduce using rule 65
	'{'            reduce using rule 65
	L_PReturn      reduce using rule 65
	L_PIdent       reduce using rule 65
	%eof           reduce using rule 65

	ListStm        goto state 121

State 11


	'('            shift, and enter state 35
	'*'            shift, and enter state 39
	'def'          shift, and enter state 114
	'do'           shift, and enter state 115
	'if'           shift, and enter state 116
	'var'          shift, and enter state 117
	'while'        shift, and enter state 118
	'{'            shift, and enter state 119
	L_PReturn      shift, and enter state 120
	L_PIdent       shift, and enter state 36

	PReturn        goto state 108
	PIdent         goto state 109
	Declaration    goto state 110
	Block          goto state 111
	Stm            goto state 112
	LExp           goto state 113
	LExp1          goto state 38

State 12


	'('            shift, and enter state 106

	Params         goto state 107

State 13


	'('            shift, and enter state 106

	Params         goto state 104
	ListParams     goto state 105

State 14


	'!'            shift, and enter state 71
	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59
	%eof           reduce using rule 80

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	ListExp        goto state 102
	Exp            goto state 103
	Exp1           goto state 75
	Exp2           goto state 73
	Exp3           goto state 70
	Exp4           goto state 68
	Exp5           goto state 66
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 15


	'!='           shift, and enter state 90
	'%'            shift, and enter state 81
	'&&'           shift, and enter state 98
	'('            shift, and enter state 77
	'*'            shift, and enter state 82
	'+'            shift, and enter state 86
	'-'            shift, and enter state 87
	'/'            shift, and enter state 83
	'<'            shift, and enter state 91
	'<='           shift, and enter state 92
	'=='           shift, and enter state 93
	'>'            shift, and enter state 94
	'>='           shift, and enter state 95
	'^'            shift, and enter state 78
	'||'           shift, and enter state 101

	Op             goto state 99
	Op1            goto state 100
	Op2            goto state 97
	Op3            goto state 89
	Op4            goto state 85
	Op5            goto state 80

State 16


	'!='           shift, and enter state 90
	'%'            shift, and enter state 81
	'&&'           shift, and enter state 98
	'('            shift, and enter state 77
	'*'            shift, and enter state 82
	'+'            shift, and enter state 86
	'-'            shift, and enter state 87
	'/'            shift, and enter state 83
	'<'            shift, and enter state 91
	'<='           shift, and enter state 92
	'=='           shift, and enter state 93
	'>'            shift, and enter state 94
	'>='           shift, and enter state 95
	'^'            shift, and enter state 78

	Op1            goto state 96
	Op2            goto state 97
	Op3            goto state 89
	Op4            goto state 85
	Op5            goto state 80

State 17


	'!='           shift, and enter state 90
	'%'            shift, and enter state 81
	'('            shift, and enter state 77
	'*'            shift, and enter state 82
	'+'            shift, and enter state 86
	'-'            shift, and enter state 87
	'/'            shift, and enter state 83
	'<'            shift, and enter state 91
	'<='           shift, and enter state 92
	'=='           shift, and enter state 93
	'>'            shift, and enter state 94
	'>='           shift, and enter state 95
	'^'            shift, and enter state 78

	Op2            goto state 88
	Op3            goto state 89
	Op4            goto state 85
	Op5            goto state 80

State 18


	'%'            shift, and enter state 81
	'('            shift, and enter state 77
	'*'            shift, and enter state 82
	'+'            shift, and enter state 86
	'-'            shift, and enter state 87
	'/'            shift, and enter state 83
	'^'            shift, and enter state 78

	Op3            goto state 84
	Op4            goto state 85
	Op5            goto state 80

State 19


	'%'            shift, and enter state 81
	'('            shift, and enter state 77
	'*'            shift, and enter state 82
	'/'            shift, and enter state 83
	'^'            shift, and enter state 78

	Op4            goto state 79
	Op5            goto state 80

State 20


	'('            shift, and enter state 77
	'^'            shift, and enter state 78

	Op5            goto state 76

State 21


	'!'            shift, and enter state 71
	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp            goto state 74
	Exp1           goto state 75
	Exp2           goto state 73
	Exp3           goto state 70
	Exp4           goto state 68
	Exp5           goto state 66
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 22


	'!'            shift, and enter state 71
	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp1           goto state 72
	Exp2           goto state 73
	Exp3           goto state 70
	Exp4           goto state 68
	Exp5           goto state 66
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 23


	'!'            shift, and enter state 71
	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp2           goto state 69
	Exp3           goto state 70
	Exp4           goto state 68
	Exp5           goto state 66
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 24


	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp3           goto state 67
	Exp4           goto state 68
	Exp5           goto state 66
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 25


	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp4           goto state 65
	Exp5           goto state 66
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 26


	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp5           goto state 63
	Exp6           goto state 64
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 27


	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'-'            shift, and enter state 62
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp6           goto state 60
	Exp7           goto state 61
	LExp           goto state 49
	LExp1          goto state 38

State 28


	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 39
	'Array'        shift, and enter state 52
	L_PTrue        shift, and enter state 53
	L_PFalse       shift, and enter state 54
	L_PNull        shift, and enter state 55
	L_PIdent       shift, and enter state 36
	L_PFloat       shift, and enter state 56
	L_PInteger     shift, and enter state 57
	L_PString      shift, and enter state 58
	L_PChar        shift, and enter state 59

	PTrue          goto state 40
	PFalse         goto state 41
	PNull          goto state 42
	PIdent         goto state 43
	PFloat         goto state 44
	PInteger       goto state 45
	PString        goto state 46
	PChar          goto state 47
	Exp7           goto state 48
	LExp           goto state 49
	LExp1          goto state 38

State 29


	'('            shift, and enter state 35
	'*'            shift, and enter state 39
	L_PIdent       shift, and enter state 36

	PIdent         goto state 33
	LExp           goto state 37
	LExp1          goto state 38

State 30


	'('            shift, and enter state 35
	L_PIdent       shift, and enter state 36

	PIdent         goto state 33
	LExp1          goto state 34

State 31


	L_integ        shift, and enter state 32


State 32

	Integer -> L_integ .                                (rule 31)



State 33

	LExp1 -> PIdent .                                   (rule 133)

	'!='           reduce using rule 133
	'%'            reduce using rule 133
	'&&'           reduce using rule 133
	'('            reduce using rule 133
	')'            reduce using rule 133
	'*'            reduce using rule 133
	'+'            reduce using rule 133
	','            reduce using rule 133
	'-'            reduce using rule 133
	'/'            reduce using rule 133
	';'            reduce using rule 133
	'<'            reduce using rule 133
	'<='           reduce using rule 133
	'='            reduce using rule 133
	'=='           reduce using rule 133
	'>'            reduce using rule 133
	'>='           reduce using rule 133
	'['            reduce using rule 133
	']'            reduce using rule 133
	'^'            reduce using rule 133
	'def'          reduce using rule 133
	'do'           reduce using rule 133
	'else'         reduce using rule 133
	'if'           reduce using rule 133
	'var'          reduce using rule 133
	'while'        reduce using rule 133
	'{'            reduce using rule 133
	'||'           reduce using rule 133
	'}'            reduce using rule 133
	L_PReturn      reduce using rule 133
	L_PIdent       reduce using rule 133
	%eof           reduce using rule 133


State 34

	%start_pLExp1 -> LExp1 .                            (rule 30)
	LExp1 -> LExp1 . '[' Exp ']'                        (rule 132)

	'['            shift, and enter state 182
	%eof           accept


State 35

	LExp1 -> '(' . LExp ')'                             (rule 134)

	'('            shift, and enter state 35
	'*'            shift, and enter state 39
	L_PIdent       shift, and enter state 36

	PIdent         goto state 33
	LExp           goto state 183
	LExp1          goto state 38

State 36

	PIdent -> L_PIdent .                                (rule 36)

	'!='           reduce using rule 36
	'%'            reduce using rule 36
	'&&'           reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	':'            reduce using rule 36
	';'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'='            reduce using rule 36
	'=='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	'^'            reduce using rule 36
	'def'          reduce using rule 36
	'do'           reduce using rule 36
	'else'         reduce using rule 36
	'if'           reduce using rule 36
	'var'          reduce using rule 36
	'while'        reduce using rule 36
	'{'            reduce using rule 36
	'||'           reduce using rule 36
	'}'            reduce using rule 36
	L_PReturn      reduce using rule 36
	L_PIdent       reduce using rule 36
	%eof           reduce using rule 36


State 37

	%start_pLExp -> LExp .                              (rule 29)

	%eof           accept


State 38

	LExp -> LExp1 .                                     (rule 131)
	LExp1 -> LExp1 . '[' Exp ']'                        (rule 132)

	'!='           reduce using rule 131
	'%'            reduce using rule 131
	'&&'           reduce using rule 131
	'('            reduce using rule 131
	')'            reduce using rule 131
	'*'            reduce using rule 131
	'+'            reduce using rule 131
	','            reduce using rule 131
	'-'            reduce using rule 131
	'/'            reduce using rule 131
	';'            reduce using rule 131
	'<'            reduce using rule 131
	'<='           reduce using rule 131
	'='            reduce using rule 131
	'=='           reduce using rule 131
	'>'            reduce using rule 131
	'>='           reduce using rule 131
	'['            shift, and enter state 182
	']'            reduce using rule 131
	'^'            reduce using rule 131
	'def'          reduce using rule 131
	'do'           reduce using rule 131
	'else'         reduce using rule 131
	'if'           reduce using rule 131
	'var'          reduce using rule 131
	'while'        reduce using rule 131
	'{'            reduce using rule 131
	'||'           reduce using rule 131
	'}'            reduce using rule 131
	L_PReturn      reduce using rule 131
	L_PIdent       reduce using rule 131
	%eof           reduce using rule 131


State 39

	LExp -> '*' . LExp1                                 (rule 130)

	'('            shift, and enter state 35
	L_PIdent       shift, and enter state 36

	PIdent         goto state 33
	LExp1          goto state 181

State 40

	Exp7 -> PTrue .                                     (rule 124)

	'!='           reduce using rule 124
	'%'            reduce using rule 124
	'&&'           reduce using rule 124
	'('            reduce using rule 124
	')'            reduce using rule 124
	'*'            reduce using rule 124
	'+'            reduce using rule 124
	','            reduce using rule 124
	'-'            reduce using rule 124
	'/'            reduce using rule 124
	';'            reduce using rule 124
	'<'            reduce using rule 124
	'<='           reduce using rule 124
	'=='           reduce using rule 124
	'>'            reduce using rule 124
	'>='           reduce using rule 124
	']'            reduce using rule 124
	'^'            reduce using rule 124
	'def'          reduce using rule 124
	'do'           reduce using rule 124
	'else'         reduce using rule 124
	'if'           reduce using rule 124
	'var'          reduce using rule 124
	'while'        reduce using rule 124
	'{'            reduce using rule 124
	'||'           reduce using rule 124
	'}'            reduce using rule 124
	L_PReturn      reduce using rule 124
	L_PIdent       reduce using rule 124
	%eof           reduce using rule 124


State 41

	Exp7 -> PFalse .                                    (rule 125)

	'!='           reduce using rule 125
	'%'            reduce using rule 125
	'&&'           reduce using rule 125
	'('            reduce using rule 125
	')'            reduce using rule 125
	'*'            reduce using rule 125
	'+'            reduce using rule 125
	','            reduce using rule 125
	'-'            reduce using rule 125
	'/'            reduce using rule 125
	';'            reduce using rule 125
	'<'            reduce using rule 125
	'<='           reduce using rule 125
	'=='           reduce using rule 125
	'>'            reduce using rule 125
	'>='           reduce using rule 125
	']'            reduce using rule 125
	'^'            reduce using rule 125
	'def'          reduce using rule 125
	'do'           reduce using rule 125
	'else'         reduce using rule 125
	'if'           reduce using rule 125
	'var'          reduce using rule 125
	'while'        reduce using rule 125
	'{'            reduce using rule 125
	'||'           reduce using rule 125
	'}'            reduce using rule 125
	L_PReturn      reduce using rule 125
	L_PIdent       reduce using rule 125
	%eof           reduce using rule 125


State 42

	Exp7 -> PNull .                                     (rule 126)

	'!='           reduce using rule 126
	'%'            reduce using rule 126
	'&&'           reduce using rule 126
	'('            reduce using rule 126
	')'            reduce using rule 126
	'*'            reduce using rule 126
	'+'            reduce using rule 126
	','            reduce using rule 126
	'-'            reduce using rule 126
	'/'            reduce using rule 126
	';'            reduce using rule 126
	'<'            reduce using rule 126
	'<='           reduce using rule 126
	'=='           reduce using rule 126
	'>'            reduce using rule 126
	'>='           reduce using rule 126
	']'            reduce using rule 126
	'^'            reduce using rule 126
	'def'          reduce using rule 126
	'do'           reduce using rule 126
	'else'         reduce using rule 126
	'if'           reduce using rule 126
	'var'          reduce using rule 126
	'while'        reduce using rule 126
	'{'            reduce using rule 126
	'||'           reduce using rule 126
	'}'            reduce using rule 126
	L_PReturn      reduce using rule 126
	L_PIdent       reduce using rule 126
	%eof           reduce using rule 126


State 43

	Exp7 -> PIdent . ListParams                         (rule 128)
	LExp1 -> PIdent .                                   (rule 133)

	'!='           reduce using rule 133
	'%'            reduce using rule 133
	'&&'           reduce using rule 133
	'('            shift, and enter state 106
			(reduce using rule 133)
